--- a/.github/actions/cached-depend/action.yml
+++ b/.github/actions/cached-depend/action.yml
@@ -12,4 +12,4 @@ runs:
         - name: Install dependencies
           if: steps.cache.outputs.cache-hit != 'true'
           run: npm ci
-          sell: bash
+          shell: bash
